Implemented fixture DTO