@@ -8,7 +8,6 @@ import com.hella.ICTManager.repository.MachineRepository;
 import com.hella.ICTManager.service.FixtureService;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
-import org.springframework.stereotype.Service;
 
 import java.io.File;
 import java.io.FileNotFoundException;
@@ -16,7 +15,6 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.util.List;
 import java.util.Scanner;
-import java.util.stream.Collectors;
 
 @Component
 public class FixtureServiceImpl implements FixtureService {
@@ -30,38 +28,36 @@ public class FixtureServiceImpl implements FixtureService {
 
     @Override
     public void save(FixtureDTO fixtureDTO) {
-        Fixture fixture = convertToEntity(fixtureDTO);
-        fixtureRepository.save(fixture);
+        fixtureRepository.save(fixtureDTO.convertToEntity());
     }
 
     @Override
     public FixtureDTO findById(long id) {
         Fixture fixture = fixtureRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("Fixture with id " + id + " not found"));
-        return convertToDTO(fixture);
+        return FixtureDTO.convertToDTO(fixture);
     }
 
     @Override
     public List<FixtureDTO> findAll() {
         List<Fixture> fixtures = fixtureRepository.findAll();
         return fixtures.stream()
-                .map(fixture -> convertToDTO(fixture))
-                .collect(Collectors.toList());
+                .map(FixtureDTO::convertToDTO)
+                .toList();
     }
 
 
-
-//    @Override
-//    public void update(long id, FixtureDTO fixtureDTO) {
-//        Fixture oldFixture = fixtureRepository.findById(id)
-//                .orElseThrow(() -> new IllegalArgumentException("Fixture with id " + id + " not found"));
-//        oldFixture.setFileName(fixtureDTO.getFileName());
-//        oldFixture.setBusiness(fixtureDTO.getBusiness());
-//        oldFixture.setProductName(fixtureDTO.getProductName());
-//        oldFixture.setProgramName(fixtureDTO.getProgramName());
-//        oldFixture.setMachines(fixtureDTO.getMachines());
-//        fixtureRepository.save(oldFixture);
-//    }
+    @Override
+    public void update(long id, FixtureDTO fixtureDTO) {
+        Fixture oldFixture = fixtureRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("Fixture with id " + id + " not found"));
+        oldFixture.setFileName(fixtureDTO.fileName());
+        oldFixture.setBusiness(fixtureDTO.business());
+        oldFixture.setProductName(fixtureDTO.productName());
+        oldFixture.setProgramName(fixtureDTO.programName());
+        oldFixture.setMachines(fixtureDTO.machines());
+        fixtureRepository.save(oldFixture);
+    }
 
     @Override
     public void deleteById(long id) {
@@ -96,7 +92,7 @@ public class FixtureServiceImpl implements FixtureService {
 
     private void doBusinessLogic(Fixture fixture) throws FileNotFoundException {
         String filePath = "X:\\Maintenance\\";
-        File file = new File(filePath+fixture.getFileName());
+        File file = new File(filePath + fixture.getFileName());
 
         if (!file.exists()) {
             throw new IllegalArgumentException("File does not exist");
@@ -110,16 +106,15 @@ public class FixtureServiceImpl implements FixtureService {
             if (counter == 50_000) {
                 String newline = "0 0 n";
 
-                try(FileWriter fileWriter = new FileWriter(filePath+fixture.getFileName());
-                    FileWriter fileWriter1 = new FileWriter(filePath + "contoare resetate.txt",true);) {
+                try (FileWriter fileWriter = new FileWriter(filePath + fixture.getFileName());
+                     FileWriter fileWriter1 = new FileWriter(filePath + "contoare resetate.txt", true);) {
                     fileWriter.write(newline);
 
                     fileWriter1.write("Contorul fixture-ului " + fixture.getFileName() + " a fost resetat la 0 in data de: " + java.time.LocalDate.now() + "\n");
                 } catch (IOException e) {
                     e.printStackTrace();
                 }
-            } else
-            {
+            } else {
                 fixture.setCounter(Integer.parseInt(words[0]));
                 fixtureRepository.save(fixture);
             }
@@ -128,8 +123,8 @@ public class FixtureServiceImpl implements FixtureService {
 
     @Scheduled(cron = "0 45 13 * * ?")
     public void scheduleBusinessLogic() {
-        List <Fixture> fixtures = fixtureRepository.findAll();
-        for ( Fixture fixture : fixtures) {
+        List<Fixture> fixtures = fixtureRepository.findAll();
+        for (Fixture fixture : fixtures) {
             try {
                 doBusinessLogic(fixture);
             } catch (FileNotFoundException e) {
@@ -138,16 +133,5 @@ public class FixtureServiceImpl implements FixtureService {
         }
     }
 
-    private FixtureDTO convertToDTO(Fixture fixture) {
-        return new FixtureDTO(fixture.getFileName(), fixture.getProgramName(), fixture.getProductName(), fixture.getBusiness());
-    }
 
-    private Fixture convertToEntity(FixtureDTO fixtureDTO) {
-        Fixture fixture = new Fixture();
-        fixture.setFileName(fixtureDTO.fileName());
-        fixture.setBusiness(fixtureDTO.business());
-        fixture.setProductName(fixtureDTO.productName());
-        fixture.setProgramName(fixtureDTO.programName());
-        return fixture;
-    }
 }
